force-app/main/default/objects/Limit_Snapshot__e/Limit_Snapshot__e.object-meta.xml
<CustomObject>
    <description>Snapshot of key limit consumption by a discrete piece of code.</description>
    <label>Limit Snapshot</label>
    <pluralLabel>Limit Snapshots</pluralLabel>
</CustomObject>