force-app/main/default/objects/Limit_Snapshot__e/fields/Additional_Information__c.field-meta.xml
<CustomField>
    <fullName>Additional_Information__c</fullName>
    <description>Contains additional information to help diagnose why this limit snapshot exhibits a considerable change from the previous one captured.</description>
    <label>Additional Information</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>