force-app/main/default/objects/Limit_Snapshot__e/fields/DML_Statements__c.field-meta.xml
<CustomField>
    <fullName>DML_Statements__c</fullName>
    <description>The number of DML statements consumed by the tracked code.</description>
    <label>DML Statements</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>