force-app/main/default/objects/Limit_Snapshot__e/fields/LimitDetailJSON__c.field-meta.xml
<CustomField>
    <fullName>LimitDetailJSON__c</fullName>
    <description>The details of the limits consumption - stored as JSON to allow additional information to be added in future without needing to update the platform event definition.</description>
    <label>LimitDetailJSON</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>