force-app/main/default/objects/Limit_Snapshot__e/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <description>The unique name for the discrete piece of code for which limit consumption is captured - this does not need to be a method or class name, just the name that you refer to for that processing.</description>
    <label>Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>