force-app/main/default/objects/Limit_Snapshot__e/fields/SOQL_Records__c.field-meta.xml
<CustomField>
    <fullName>SOQL_Records__c</fullName>
    <description>The number of SOQL records consumed by the tracked code.</description>
    <label>SOQL Records</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>