force-app/main/default/objects/Limit_Snapshot__e/fields/User_Id__c.field-meta.xml
<CustomField>
    <fullName>User_Id__c</fullName>
    <description>The record ID for the user executing the tracked code.</description>
    <label>User Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>